crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC110_ASYNC110.py.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC110 Use `trio.Event` instead of awaiting `trio.sleep` in a `while` loop
 --> ASYNC110.py:7:5
  |
7 | /     while True:
8 | |         await trio.sleep(10)
  | |____________________________^
  |

ASYNC110 Use `trio.Event` instead of awaiting `trio.sleep` in a `while` loop
  --> ASYNC110.py:12:5
   |
12 | /     while True:
13 | |         await trio.sleep_until(10)
   | |__________________________________^
   |

ASYNC110 Use `anyio.Event` instead of awaiting `anyio.sleep` in a `while` loop
  --> ASYNC110.py:22:5
   |
22 | /     while True:
23 | |         await anyio.sleep(10)
   | |_____________________________^
   |

ASYNC110 Use `anyio.Event` instead of awaiting `anyio.sleep` in a `while` loop
  --> ASYNC110.py:27:5
   |
27 | /     while True:
28 | |         await anyio.sleep_until(10)
   | |___________________________________^
   |

ASYNC110 Use `asyncio.Event` instead of awaiting `asyncio.sleep` in a `while` loop
  --> ASYNC110.py:37:5
   |
37 | /     while True:
38 | |         await asyncio.sleep(10)
   | |_______________________________^
   |
