crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC210_ASYNC210.py.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC210 Async functions should not call blocking HTTP methods
 --> ASYNC210.py:8:5
  |
8 |     urllib.request.urlopen("http://example.com/foo/bar").read()  # ASYNC210
  |     ^^^^^^^^^^^^^^^^^^^^^^
  |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:12:5
   |
12 |     requests.get()  # ASYNC210
   |     ^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:16:5
   |
16 |     httpx.get()  # ASYNC210
   |     ^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:20:5
   |
20 |     requests.post()  # ASYNC210
   |     ^^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:24:5
   |
24 |     httpx.post()  # ASYNC210
   |     ^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:28:5
   |
28 |     requests.get()  # ASYNC210
   |     ^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:29:5
   |
29 |     requests.get(...)  # ASYNC210
   |     ^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:31:11
   |
31 |     print(requests.get())  # ASYNC210
   |           ^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:32:11
   |
32 |     print(requests.get(requests.get()))  # ASYNC210
   |           ^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:32:24
   |
32 |     print(requests.get(requests.get()))  # ASYNC210
   |                        ^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:34:5
   |
34 |     requests.options()  # ASYNC210
   |     ^^^^^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:35:5
   |
35 |     requests.head()  # ASYNC210
   |     ^^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:36:5
   |
36 |     requests.post()  # ASYNC210
   |     ^^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:37:5
   |
37 |     requests.put()  # ASYNC210
   |     ^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:38:5
   |
38 |     requests.patch()  # ASYNC210
   |     ^^^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:39:5
   |
39 |     requests.delete()  # ASYNC210
   |     ^^^^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:42:5
   |
42 |     httpx.options("")  # ASYNC210
   |     ^^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:43:5
   |
43 |     httpx.head("")  # ASYNC210
   |     ^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:44:5
   |
44 |     httpx.post("")  # ASYNC210
   |     ^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:45:5
   |
45 |     httpx.put("")  # ASYNC210
   |     ^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:46:5
   |
46 |     httpx.patch("")  # ASYNC210
   |     ^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:47:5
   |
47 |     httpx.delete("")  # ASYNC210
   |     ^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:50:5
   |
50 |     urllib3.request()  # ASYNC210
   |     ^^^^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:51:5
   |
51 |     urllib3.request(...)  # ASYNC210
   |     ^^^^^^^^^^^^^^^
   |

ASYNC210 Async functions should not call blocking HTTP methods
  --> ASYNC210.py:53:5
   |
53 |     urllib.request.urlopen("")  # ASYNC210
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
