crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC212_ASYNC212.py.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC212 Blocking httpx method client.close() in async context, use httpx.AsyncClient
  --> ASYNC212.py:27:5
   |
27 |     client.close()  # ASYNC212
   |     ^^^^^^^^^^^^
   |

ASYNC212 Blocking httpx method client.delete() in async context, use httpx.AsyncClient
  --> ASYNC212.py:28:5
   |
28 |     client.delete()  # ASYNC212
   |     ^^^^^^^^^^^^^
   |

ASYNC212 Blocking httpx method client.get() in async context, use httpx.AsyncClient
  --> ASYNC212.py:29:5
   |
29 |     client.get()  # ASYNC212
   |     ^^^^^^^^^^
   |

ASYNC212 Blocking httpx method client.head() in async context, use httpx.AsyncClient
  --> ASYNC212.py:30:5
   |
30 |     client.head()  # ASYNC212
   |     ^^^^^^^^^^^
   |

ASYNC212 Blocking httpx method client.options() in async context, use httpx.AsyncClient
  --> ASYNC212.py:31:5
   |
31 |     client.options()  # ASYNC212
   |     ^^^^^^^^^^^^^^
   |

ASYNC212 Blocking httpx method client.patch() in async context, use httpx.AsyncClient
  --> ASYNC212.py:32:5
   |
32 |     client.patch()  # ASYNC212
   |     ^^^^^^^^^^^^
   |

ASYNC212 Blocking httpx method client.post() in async context, use httpx.AsyncClient
  --> ASYNC212.py:33:5
   |
33 |     client.post()  # ASYNC212
   |     ^^^^^^^^^^^
   |

ASYNC212 Blocking httpx method client.put() in async context, use httpx.AsyncClient
  --> ASYNC212.py:34:5
   |
34 |     client.put()  # ASYNC212
   |     ^^^^^^^^^^
   |

ASYNC212 Blocking httpx method client.request() in async context, use httpx.AsyncClient
  --> ASYNC212.py:35:5
   |
35 |     client.request()  # ASYNC212
   |     ^^^^^^^^^^^^^^
   |

ASYNC212 Blocking httpx method client.send() in async context, use httpx.AsyncClient
  --> ASYNC212.py:36:5
   |
36 |     client.send()  # ASYNC212
   |     ^^^^^^^^^^^
   |

ASYNC212 Blocking httpx method client.stream() in async context, use httpx.AsyncClient
  --> ASYNC212.py:37:5
   |
37 |     client.stream()  # ASYNC212
   |     ^^^^^^^^^^^^^
   |

ASYNC212 Blocking httpx method client.request() in async context, use httpx.AsyncClient
  --> ASYNC212.py:45:5
   |
45 |     client.request()  # ASYNC212
   |     ^^^^^^^^^^^^^^
   |

ASYNC212 Blocking httpx method client.request() in async context, use httpx.AsyncClient
  --> ASYNC212.py:50:5
   |
50 |     client.request()  # ASYNC212
   |     ^^^^^^^^^^^^^^
   |

ASYNC212 Blocking httpx method client.request() in async context, use httpx.AsyncClient
  --> ASYNC212.py:55:5
   |
55 |     client.request()  # ASYNC212
   |     ^^^^^^^^^^^^^^
   |

ASYNC212 Blocking httpx method client.request() in async context, use httpx.AsyncClient
  --> ASYNC212.py:61:5
   |
61 |     client.request()  # ASYNC212
   |     ^^^^^^^^^^^^^^
   |

ASYNC212 Blocking httpx method global_client.request() in async context, use httpx.AsyncClient
  --> ASYNC212.py:69:5
   |
69 |     global_client.request()  # ASYNC212
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
