crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC220_ASYNC22x.py.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC220 Async functions should not create subprocesses with blocking methods
  --> ASYNC22x.py:31:5
   |
31 |     subprocess.Popen()  # ASYNC220
   |     ^^^^^^^^^^^^^^^^
   |

ASYNC220 Async functions should not create subprocesses with blocking methods
  --> ASYNC22x.py:73:5
   |
73 |     os.spawnl(os.P_NOWAIT)  # ASYNC220
   |     ^^^^^^^^^
   |

ASYNC220 Async functions should not create subprocesses with blocking methods
  --> ASYNC22x.py:74:5
   |
74 |     os.spawnl(P_NOWAIT)  # ASYNC220
   |     ^^^^^^^^^
   |

ASYNC220 Async functions should not create subprocesses with blocking methods
  --> ASYNC22x.py:75:5
   |
75 |     os.spawnl(mode=os.P_NOWAIT)  # ASYNC220
   |     ^^^^^^^^^
   |

ASYNC220 Async functions should not create subprocesses with blocking methods
  --> ASYNC22x.py:76:5
   |
76 |     os.spawnl(mode=P_NOWAIT)  # ASYNC220
   |     ^^^^^^^^^
   |

ASYNC220 Async functions should not create subprocesses with blocking methods
  --> ASYNC22x.py:86:5
   |
86 |     os.spawnl(0)  # ASYNC220
   |     ^^^^^^^^^
   |

ASYNC220 Async functions should not create subprocesses with blocking methods
  --> ASYNC22x.py:87:5
   |
87 |     os.spawnl(1)  # ASYNC220
   |     ^^^^^^^^^
   |

ASYNC220 Async functions should not create subprocesses with blocking methods
  --> ASYNC22x.py:88:5
   |
88 |     os.spawnl(foo())  # ASYNC220
   |     ^^^^^^^^^
   |
