crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC222_ASYNC222.py.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC222.py:5:5: ASYNC222 Async functions should not call synchronous `os` methods
  |
4 | async def foo():
5 |     os.popen()
  |     ^^^^^^^^ ASYNC222
  |

ASYNC222.py:9:5: ASYNC222 Async functions should not call synchronous `os` methods
  |
8 | async def foo():
9 |     os.spawnl()
  |     ^^^^^^^^^ ASYNC222
  |
