crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC222_ASYNC22x.py.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC222 Async functions should not wait on processes with blocking methods
  --> ASYNC22x.py:20:5
   |
20 |     os.wait4(10)  # ASYNC222
   |     ^^^^^^^^
   |

ASYNC222 Async functions should not wait on processes with blocking methods
  --> ASYNC22x.py:24:5
   |
24 |     os.wait(12)  # ASYNC222
   |     ^^^^^^^
   |

ASYNC222 Async functions should not wait on processes with blocking methods
  --> ASYNC22x.py:91:5
   |
91 |     os.wait()  # ASYNC222
   |     ^^^^^^^
   |

ASYNC222 Async functions should not wait on processes with blocking methods
  --> ASYNC22x.py:92:5
   |
92 |     os.wait3()  # ASYNC222
   |     ^^^^^^^^
   |

ASYNC222 Async functions should not wait on processes with blocking methods
  --> ASYNC22x.py:93:5
   |
93 |     os.wait4()  # ASYNC222
   |     ^^^^^^^^
   |

ASYNC222 Async functions should not wait on processes with blocking methods
  --> ASYNC22x.py:94:5
   |
94 |     os.waitid()  # ASYNC222
   |     ^^^^^^^^^
   |

ASYNC222 Async functions should not wait on processes with blocking methods
  --> ASYNC22x.py:95:5
   |
95 |     os.waitpid()  # ASYNC222
   |     ^^^^^^^^^^
   |
