crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC250_ASYNC250.py.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC250 Blocking call to `input()` in async context
 --> ASYNC250.py:7:9
  |
7 |     k = input()  # ASYNC250
  |         ^^^^^
  |

ASYNC250 Blocking call to `input()` in async context
 --> ASYNC250.py:8:5
  |
8 |     input("hello world")  # ASYNC250
  |     ^^^^^
  |

ASYNC250 Blocking call to `input()` in async context
  --> ASYNC250.py:21:5
   |
21 |     builtins.input("testing")  # ASYNC250
   |     ^^^^^^^^^^^^^^
   |

ASYNC250 Blocking call to `input()` in async context
  --> ASYNC250.py:28:5
   |
28 |     input("sync") # should emit here
   |     ^^^^^
   |
