crates/ruff_linter/src/rules/flake8_async/snapshots/ruff_linter__rules__flake8_async__tests__ASYNC251_ASYNC251.py.snap
---
source: crates/ruff_linter/src/rules/flake8_async/mod.rs
---
ASYNC251 Async functions should not call `time.sleep`
 --> ASYNC251.py:6:5
  |
6 |     time.sleep(1)  # ASYNC251
  |     ^^^^^^^^^^
  |
